2006-10-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add version control of format.

2006-10-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix save.

2006-10-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix warning on Linux.
	* Unit Test Result: 3 classes, 8 methods, 43 tests, 0 failed

2006-10-08 Yen-Ju Chen <yjchenx at gmail _dot_ com>
	
	* Initial import (tested on mac only).
