@@ -1,6 +1,7 @@
 2006-10-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
 	* Add version control of format.
+	* Fix loading of CKGroup.
 
 2006-10-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
